Fix h3 issue overlap 1340px media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,9 +578,9 @@ form {
 }
 
 #meetup-times div {
-    width: 15%;
+    width: 20%;
     height: 50%;
-    padding: 80px 30px 30px 30px;
+    padding: 80px 10px 30px 10px;
     }
 
 #meetup-times h3 {
